--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015, Nordic Semiconductor
   ~ All rights reserved.
   ~
@@ -22,66 +21,68 @@
   -->
 <resources>
 
-	<string name="app_name">Vapp</string>
+    <string name="app_name">Vapp</string>
 
-	<string name="shortcut_dfu_short">DFU</string>
-	<string name="shortcut_dfu_long">Device Firmware Update</string>
-	<string name="shortcut_uart_short">UART</string>
-	<string name="shortcut_uart_long">Nordic UART Service</string>
-	
-	<string name="ok">OK</string>
-	<string name="yes">Yes</string>
-	<string name="no">No</string>
-	<string name="cancel">Cancel</string>
-	
-	<string name="action_about">About</string>
-	<string name="action_settings">Settings</string>
-	<string name="action_connect">CONNECT</string>
-	<string name="action_select">SELECT DEVICE</string>
-	<string name="action_add_device">ADD DEVICE</string>
-	<string name="action_connecting">CONNECTING…</string>
-	<string name="action_disconnect">DISCONNECT</string>
-	<string name="action_disconnecting">DISCONNECTING…</string>
+    <string name="shortcut_dfu_short">DFU</string>
+    <string name="shortcut_dfu_long">Device Firmware Update</string>
+    <string name="shortcut_uart_short">UART</string>
+    <string name="shortcut_uart_long">Nordic UART Service</string>
 
-	<string name="drawer_open">Open</string>
-	<string name="drawer_close">Close</string>
-	<string name="drawer_plugins">PLUGINS</string>
-	<string name="drawer_plugin_nrf_connect">nRF Connect</string>
-	
-	<string name="battery">%d%%</string>
-	<string name="not_available">n/a</string>
-	<string name="not_available_value">" - "</string>
-	<string name="no_ble">Device doesn\'t have BLE support!</string>
-	<string name="no_apps">No profiles found.</string>
-	<string name="not_supported">The device does not have required services.</string>
-	<string name="no_application">Web Browser application is not available.</string>
-	<string name="no_uri_application">There is no application that can open this URI.</string>
-	<string name="no_application_play">Google Play not installed.</string>
-	<string name="no_required_permission">Permission denied.</string>
-	<string name="scanner_title">Select device:</string>
-	<string name="scanner_empty">No device found</string>
-	<string name="scanner_action_scan">Scan</string>
-	<string name="scanner_action_cancel">Cancel</string>
-	<string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
-	<string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
-	<string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth LE devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>
+    <string name="ok">OK</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="cancel">Cancel</string>
 
-	<string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>
+    <string name="action_about">About</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_connect">CONNECT</string>
+    <string name="action_select">SELECT DEVICE</string>
+    <string name="action_add_device">ADD DEVICE</string>
+    <string name="action_connecting">CONNECTING…</string>
+    <string name="action_disconnect">DISCONNECT</string>
+    <string name="action_disconnecting">DISCONNECTING…</string>
 
-	<string name="about_title">About</string>
-	<string name="about_version">\n\nVersion: %s</string>
-	<string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="drawer_plugins">PLUGINS</string>
+    <string name="drawer_plugin_nrf_connect">nRF Connect</string>
 
-	<string name="menu_home">Home</string>
-	<string name="menu_graph">Graph</string>
-	<string name="menu_numbers">Numbers</string>
-	<string name="menu_settings">Settings</string>
-	<string name="navigation_drawer_open">Open navigation drawer</string>
-	<string name="navigation_drawer_close">Close navigation drawer</string>
-	<string name="home_message">Home</string>
-	<string name="settings_message">Settings</string>
-	<string name="graph_message">Graph</string>
-	<string name="numbers_message">Numbers</string>
-	<string name="Graph_button">Graph</string>
-	<string name="Statistics_button">Statistics</string>
+    <string name="battery">%d%%</string>
+    <string name="not_available">n/a</string>
+    <string name="not_available_value">" - "</string>
+    <string name="no_ble">Device doesn\'t have BLE support!</string>
+    <string name="no_apps">No profiles found.</string>
+    <string name="not_supported">The device does not have required services.</string>
+    <string name="no_application">Web Browser application is not available.</string>
+    <string name="no_uri_application">There is no application that can open this URI.</string>
+    <string name="no_application_play">Google Play not installed.</string>
+    <string name="no_required_permission">Permission denied.</string>
+    <string name="scanner_title">Select device:</string>
+    <string name="scanner_empty">No device found</string>
+    <string name="scanner_action_scan">Scan</string>
+    <string name="scanner_action_cancel">Cancel</string>
+    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
+    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
+    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth LE devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>
+
+    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>
+
+    <string name="about_title">About</string>
+    <string name="about_version">\n\nVersion: %s</string>
+    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_graph">Graph</string>
+    <string name="menu_numbers">Numbers</string>
+    <string name="menu_settings">Settings</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="home_message">Home</string>
+    <string name="settings_message">Settings</string>
+    <string name="graph_message">Graph</string>
+    <string name="numbers_message">Numbers</string>
+    <string name="Graph_button">Graph</string>
+    <string name="Statistics_button">Statistics</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
